# streaks2

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.swp  pyproject.toml
src/expt/: __init__.py  hello.py  streaks.py
src/streaks2/: __init__.py  comparison.md  comparison.txt  ostreak_stats.py  streak_examples.txt  streak_stats.py  streak_stats_to_migrate  streaks.py  utils.py
src/streaks2-1/src/streaks2/: streaks.py
tests/: ostreaks_test.py  stats_test.py  streak_stats_test.py  streaks_test.py  test_main.py  test_streaks.py  utils_test.py
