[project]
name = "streaks2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mutmut>=3.2.3",
    "numpy>=2.2.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
    "termcolor>=2.5.0",
]

[project.scripts]
main = "streaks2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
